--- a/mod2_solution/css/styles.css
+++ b/mod2_solution/css/styles.css
@@ -8,7 +8,7 @@ h1 {
 .text-container {
   border: 1px solid #000;
   margin: 10px;
-  background-color: grey;
+  background-color: #a5a7aa;
   position: relative;
 }
 .title {
